# microblog

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini
src/alembic/: README  env.py
src/alembic/versions/: 9969bc8e0315_add_likes_table.py  a234cfd582ee_initial_schema.py
src/microblog/: app.py  database.py  models.py  routers.py  template_utils.py
src/microblog/routers/: __init__.py  auth.py  posts.py  users.py
src/microblog/static/: style.css
src/microblog/templates/: create_post.html  header.html  index.html  login.html  post.html  posts.html  register.html  single_post.html  utils.py
