[project]
name = "microblog"
version = "0.1.0"
description = "A FastAPI project named microblog"

dependencies = [
    "fastapi==0.115.13",            # web app framework
    "uvicorn[standard]==0.34.3",    # wsgi server
    "Jinja2",                       # Template engine
    "alembic==1.16.2",              # Database migration
    "sqlalchemy==2.0.41",           # To connect to database
    "psycopg2-binary==2.9.10",      # Postgres
    "python-multipart==0.0.20",     # Forms in fastapi
    "passlib==1.7.4",
    "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "black",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"microblog" = ["templates/**/*"]